login route moved from auth to user
